==> Charlotte-Nao/Infantry/Components/referee/referee.c <==
#include "referee.h"
#include "usart.h"
#include "string.h"
#include "cmsis_os.h"
#include "D:/all_code/clion/infantry/Bsp//uart/bsp_uart.h"

void Referee_Init(void) {
    memset(&referee_data, 0, sizeof(referee_info_t));

    // 开启接收 DMA 和空闲中断
    SET_BIT(huart6.Instance->CR3, USART_CR3_DMAR);
    __HAL_UART_ENABLE_IT(&huart6, UART_IT_IDLE);
    __HAL_DMA_DISABLE(&hdma_usart6_rx);

    hdma_usart6_rx.Instance->PAR = (uint32_t) & (USART6->DR);
    hdma_usart6_rx.Instance->M0AR = (uint32_t)(ref_rx_buf[0]);
    hdma_usart6_rx.Instance->M1AR = (uint32_t)(ref_rx_buf[1]);
    hdma_usart6_rx.Instance->NDTR = REF_RX_BUF_SIZE;
    SET_BIT(hdma_usart6_rx.Instance->CR, DMA_SxCR_DBM);

    __HAL_DMA_ENABLE(&hdma_usart6_rx);
}

void USART6_IRQHandler(void) {
    if (huart6.Instance->SR & UART_FLAG_IDLE) {
        __HAL_UART_CLEAR_IDLEFLAG(&huart6);
        uint16_t rx_len;
        uint8_t current_mem = (hdma_usart6_rx.Instance->CR & DMA_SxCR_CT) ? 1 : 0;

        __HAL_DMA_DISABLE(&hdma_usart6_rx);
        rx_len = REF_RX_BUF_SIZE - hdma_usart6_rx.Instance->NDTR;
        hdma_usart6_rx.Instance->NDTR = REF_RX_BUF_SIZE;

        if (current_mem == 0) hdma_usart6_rx.Instance->CR |= DMA_SxCR_CT;
        else hdma_usart6_rx.Instance->CR &= ~DMA_SxCR_CT;

        __HAL_DMA_ENABLE(&hdma_usart6_rx);

        if (rx_len > 0) {
            Referee_Data_Parse(ref_rx_buf[current_mem], rx_len);
        }
    }
}
